# x86-to-arm64-binary-converter

./: CMakeLists.txt  README.md  install_dependencies.sh  main.cpp
include/: elf_converter.h  elf_file.h  elf_section.h  x86_instruction.h
src/: elf_converter.cpp  elf_file.cpp  elf_section.cpp  x86_instruction.cpp
